FOLSPRINGS-188 - Upgrade to Java 21